[tool.poetry]
name = "tensortradepy"
version = "0.2.2"
description = "Python client for the Tensor Trade API"
authors = ["Defilogist <defilogist@thewise.trade>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
base58 = "^2.1.1"
solana = "^0.30.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
